app/assets/stylesheets/shared/header.scss
//misc
.sticky {
  width: 100%;
}
.sticky button:focus {
  outline:0;
}
nav .dropdown-pane {
  border: 1px solid $light-gray;
  hr {
    margin: .5rem auto;
  }
}

//navbar top tier
.nav-toptier {
  padding-bottom: 0;
  max-width: none;
  border-bottom: 1px solid $light-gray;
  border-bottom-style: inset;
  border-width: 1px;
  line-height: 0.8;
  background-color: $white;
  img {
    max-height: 40px; 
  }
  li {
    vertical-align: bottom;
    border-bottom: 3px solid transparent;
  }
  li.active {
    border-bottom: 3px solid $primary-color;
  }
  li a {
    padding: 0;
  }
  h5 {
    margin-bottom: 0;
    padding-right: 1rem;
    padding-left: 1rem;
  }
  >div {
    position: relative;
  }
  ul {
    display: inline-block;
  }
  .menu .active > a {//overrides foundation style
    background-color: transparent;
  }
}
.top-bar ul {
  background: transparent; //overrides foundation style
}

//BROWSE & SHARE link colors
.nav-toptier h5, .nav-midtier h6 {
//  text-transform: uppercase;
  font-size: 2rem;
  font-weight: 700;
  color: $dark-gray;
  &:hover {
    color: $primary-color;
    cursor: pointer;
  }
  &.active {
    color: $primary-color;
  }
  &.active:hover {
    color: darken($primary-color, 15%);
  }
}

//user notifications
.nav-notifications {
  vertical-align: bottom;
  margin-right: 10px; 
  position: relative;
}
.notifications_count_small {
  color: $primary-color;
  font-weight: 700;
  font-size: 1.6rem;
  margin-left: 5px;
  &:hover {
    color: darken($primary-color, 14%);
  }
}
.nav-notifications {
  span {
    @extend %header-gray-link;
    font-size: 1.4rem;
  }
  &:hover {
    span {
      color: $primary-color;
    }
    .notifications_count {
      color: darken($primary-color, 14%);
    }
  }
  .notifications_count {
    color: $primary-color;
    font-weight: 700;
    font-size: 1.6rem;
    margin-left: 5px;
  }
}

//user info section
.nav-toptier .user-info {
  position: absolute; 
  bottom: 8px; 
  right: 0;
  >div {
    display: inline-block;
  }
  span, div:nth-child(3) {
    position: relative;
    vertical-align: bottom;
  }
  a.logged-in {
    font-size: 110%;
    color: $dark-gray;
    &:hover {
      color: $primary-color;
      img {
        filter: brightness(115%);
      }
    }
    span {
      font-weight: 600;
      margin-right: 5px;
    }
  }
}
#user_dropdown {
  width: 200px;
}
#search_dropdown {
  ul {
    li:first-child {
      width: 100%;
    }
  }
}
#user_dropdown_button {
  &:after {
    cursor: pointer;
    width: 0;
    height: 0;
    border: inset 6px;
    content: '';
    border-top-style: solid;
    border-color: $dark-gray transparent transparent;
    margin-bottom: -3px;
    display: inline-block;
    vertical-align: bottom;
  }
  &:hover {
    &:after {
      border-color: $primary-color transparent transparent;
    }
  }
}

//navbar bottom tier
.nav-bottomtier {
//  padding: 0.3rem 0 0;
  border-bottom: 1px solid $light-gray;
  border-bottom-style: inset;
  border-width: 1px;
//  background-color: $ultra-light-gray;
  background-color: $white;
  -webkit-box-shadow: inset 0px 5px 10px -7px $dark-gray;
  -moz-box-shadow: inset 0px 5px 10px -7px $dark-gray;
  box-shadow: inset 0px 5px 10px -7px $dark-gray;
  max-width: none;
//  line-height: 1.3;
  h6 {
//    text-transform: uppercase;
    border-right: 1px solid $dark-gray;
    display: inline-block;
    padding-right: 15px;
    margin-bottom: 0;
    margin-left: 10px;
    font-size: 1.6rem;
    font-weight: 700;
    color: $dark-gray;
  }
  .columns>ul {
    display: inline-block;
  }
  &>.columns:nth-child(2) {
    margin-right: 30px;
  }
  &>.columns {
    width: auto;
//    margin-top: 5px;
    line-height: 0.9;
//    font-weight: 800;
  }
  ul .columns {
    padding: 0 5px;
  }
  ul .columns a {
    @include font-size($subtext-sizes);
  }
  ul .row {
    margin: 0;
  }
  .list-header {
//    text-transform: uppercase;
    font-weight: 700;
    color: $topbar-link-color;
  }
  .is-dropdown-submenu {
    padding: 15px 10px;
  }
  .is-drilldown-submenu {
    background-color: $ultra-light-gray;
  }
  .occasion {
    min-width: 500px;
  }
  .relationship, .interests {
    min-width: 300px;
  }
  .type {
    min-width: 400px;
  }
  .float-right {
    border-top: 2px solid transparent;
    border-bottom: 2px solid transparent;
    line-height: 2.15;
  }
  .fa {
    font-size: 1.6rem;
  }
  .fa-search {
    color: $dark-gray;
    &:hover {
      color: $primary-color;
    }
  }
  .menu > li > a {
    line-height: 1.3;
  }
  .dropdown.menu>li.is-dropdown-submenu-parent > a::after { //overrides foundation
    border-color: $dark-gray transparent transparent;
  }
}

//tag category links
#tags-menu ul a {
  @extend %header-gray-link;
//  padding-right: 0;
  border-top: 2px solid transparent;
  border-bottom: 2px solid transparent;
  &:focus {
    outline:0;
  }
  &:hover {
    border-bottom: 2px solid $topbar-link-color-hover;
    &:after {
      border-color: $primary-color transparent transparent;
    }
  }
  &:hover i {
    color: darken($primary-color, 14%);
  }
  i {
    color: $primary-color;
    vertical-align: baseline;
  }
  &.no_dropdown:hover {
    border-bottom: 2px solid transparent;
  }
  &.navbar_fail {
    @extend .header-blue-link;
    font-weight: 500;
  }
}

//tag links
#tags-menu ul ul a {
//  @extend .header-blue-link;
  @extend %header-gray-link;
  &:hover {
    border-bottom: none;
  }
}

@media only screen and (max-width: 640px) {
  //navbar top tier
  .nav-toptier {
    padding-top: 4px;
    img {
      max-height: 30px; 
    }
  }
  
  //user info section
  .nav-toptier .user-info {
    bottom: 4px; 
    a.logged-in {
      line-height: 0.8;
      font-size: 100%;
      span {
        border-right: none;
      }
    }
  }
   
  //navbar mid tier
  .nav-midtier {
//    background-color: $ultra-light-gray;
    background-color: $white;
    padding: 0;
    .row:first-child {
      border-bottom: 1px solid $light-gray;
      border-bottom-style: inset; 
    }
    .columns {
      padding-top: 3px;
      border-bottom: 3px solid transparent;
    }
    h6 {
      font-weight: 700;
      margin-bottom: 0;
//      line-height: inherit;
    }
    input {
      max-width: none;
    }
    .input-group {
      margin-top: 1rem;
    }
    .input-group-field {
      margin-left: 1rem;
    }
    div.active {
      border-bottom: 3px solid $primary-color;
      .fa, .active {
        color: $primary-color;
        &:hover {
          color: darken($primary-color, 15%);
        }
      }
    }
    .fa {
      font-size: 2rem;
      line-height: 1.4;
      color: $topbar-link-color;
      &:hover {
        color: $primary-color;
        cursor: pointer;
      }
    }
  }
  
  //navbar bottom tier
  .nav-bottomtier {
    position: relative;
    z-index: 100;
    h6 {
      border-right: none;
      line-height: 2.5;
    }
    .columns>ul {
      display: block;
      &:first-child {
      }
    }
    &>.columns {
      width: 100%;
      line-height: 1.3;
      &:nth-child(2) .is-drilldown {
        height: 550px;
      }
    }
    ul .columns {
      font-size: 100%;
    }
    .occasion, .relationship, .interests, .type {
      min-width: auto;
    }
    .is-drilldown li.hide-for-small-only {
      display: none !important;
    }
    ul, .menu > li > a {
      line-height: 1.8;
    }
  }

  //tag category links
  #tags-menu ul a {
    border-bottom: none;
    &:hover, &:focus {
      border-bottom: none;
    }
    &.no_dropdown:hover {
      border-bottom: none;
    }
  }
  
  //tag links
  #tags-menu ul a {
    &:hover {
     border-bottom: none;
    }
  }
  
  //other
  #search_dropdown_mobile {
    display: none;
    border-bottom: 1px solid $light-gray;
    border-bottom-style: inset;
    .input-group-field {
      width: 98%;
    }
    
  }
  .nav-notifications {
    margin-right: 0; 
    font-size: 1rem;
  }
  .dropdown-pane.bottom {
    position: static;
    height: 0px;
    width: 0px;
    padding: 0;
    border: 0;
  }
}

